--- a/public/css/catalogoProducto.css
+++ b/public/css/catalogoProducto.css
@@ -150,7 +150,9 @@ body {
 .products_principal {
     display: flex;
     justify-content: center;
-    margin-top: 20px;
+    margin-top: 0px;
+    padding: 10px;
+    margin-bottom: 20px;
 }
 
 .contenido_producto {
@@ -168,38 +170,135 @@ body {
     padding: 5px;
 }
 
-.titulo {
-    font-size: 24px;
-    margin-top: 0;
-    text-align: center;
-}
+.product-detail { 
+    max-width: 500px;
+    margin: 10px 10px;
+    padding: 20px;
+    background-color: #f7f7f7;
+    border: 1px solid #ccc;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+  }
+  
+  .product-info { 
+    text-align: left; 
+    padding-left: 20px;
+    
+  }
 
-.descrpcion_producto {
-    max-width: 100%;
-    font-size: 14px;
-    text-align: justify;
-}
-
-.imagenes-adicionales {
+  .shipping-info {
     display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    width: 100%;
-    margin: 5px;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 20px;
+  }
+  
+  .shipping-info p {
+    margin-top: 10px;
+  }
+  
+  .shipping-info i {
+    color: #45576e;
+    margin-right: 10px;
+  }
+
+  .shipping-info p {
+    font-size: 14px;
+    line-height: 1.6;
+  }
+  .shipping-title{
+    font-weight: bold;
+  }
+  
+  .product-name {
+    font-size: 24px;
+    font-weight: bolder;
+    margin-bottom: 10px;
+    text-transform: uppercase;
+    
+    font-family: 'Roboto';
+  }
+  
+  .product-price {
+    font-size: 23px;
+    font-weight: bold;
+    margin-bottom: 10px;
+    color: #3375cc;  /*#45576e;*/
+  }
+  
+ 
+  .product-discount {
+    font-size: 16px;
+    color: #666;
+  }
+
+  
+  .product-color {
+    font-size: 16px;
+    margin-bottom: 10px;
+  }
+  
+  .quantity-container {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+  }
+  
+  .product-quantity {
+    font-size: 14px;
+    margin-right: 10px;
+  }
+  
+  .quantity-input {
+    width: 60px;
+    padding: 5px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+  }
+
+
+  /* Botones */
+.botones {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.imagenes-adicionales img {
-    width: 30%;
+.editar-eliminar {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.agregar {
+    display: inline-block;
+    align-items: left;
+}
+
+.botones button, .botones a {
+    display: inline-block;
+    margin-top: 10px;
+    padding: 10px;
+    background-color: #859bb2;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    border: none;
     cursor: pointer;
-    margin: 5px;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+    width: 200px;
+    height: 40px;
 }
 
-.imgPrinc-carrito {
-    position: relative;
-    margin-top: 20px;
+.botones button:hover, .botones a:hover {
+    background-color: #45a049;
+    color: white;
 }
+  
 
-@media (min-width: 361px) and (max-width: 789px) {
+@media (min-width: 310px) and (max-width: 789px) {
     .products_principal img {
         width: 100vw;
         max-width: 90vw;
@@ -230,6 +329,15 @@ body {
     .descrpcion_producto {
         font-size: 16px;
     }
+
+    .product-info { 
+        text-align: center;
+    }
+
+    .quantity-container {
+        margin-left: 110px;
+    }
+    
 }
 
 @media (min-width: 790px) {
@@ -244,45 +352,6 @@ body {
     }
 }
 
-/* Botones */
-.botones {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.editar-eliminar {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-}
-
-.agregar {
-    display: inline-block;
-    align-items: left;
-}
-
-.botones button, .botones a {
-    display: inline-block;
-    padding: 10px 20px;
-    margin-top: 10px;
-    background-color: #f5c597;
-    color: #859bb2;
-    text-align: center;
-    text-decoration: none;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-    border-radius: 5px;
-    transition: background-color 0.3s;
-    width: 200px;
-    height: 50px;
-}
-
-.botones button:hover, .botones a:hover {
-    background-color: #45a049;
-    color: white;
-}
 
 @media screen and (max-width: 600px) {
     .botones button, .botones a {
