--- a/src/views/catalogo.ejs
+++ b/src/views/catalogo.ejs
@@ -5,7 +5,7 @@
     <title>Catalogo de productos</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Poppins:ital,wght@0,100;0,400;1,500&family=Roboto:wght@100&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="/css/catalogoProducto.css">
     <link href="/css/header-footer.css" rel="stylesheet">
 </head>
@@ -17,7 +17,7 @@
             <% if(locals.userLogged == 2) { %>
             <div class="botones">
                 <div class="agregar">
-                    <a href="/productos/create" class="agregar-producto">Agregar</a>
+                    <a href="/productos/create" class="agregar-producto"><i class="fa-solid fa-plus"></i> Agregar Producto</a>
                 </div>
             </div>
             <% } %>
